# codeforcec-and-data-structure-implementation

./: .gitignore  1948b  CMakeLists.txt  codeforces.id  status.md  tasks.md  test1948
bin.rel/: test_stackarr
prj.app/: CMakeLists.txt
prj.app/robocalc/: CMakeLists.txt  robocalc.cpp  robocalc.hpp
prj.app/timing_q/: CMakeLists.txt  timing_q.cpp
prj.codeforces/: 0414b.cpp  0456a.cpp  0507b.cpp  0514b.cpp  0514c.cpp  0515c.cpp  0550b.cpp  0617a.cpp  0731a.cpp  0935b.cpp  1003b.cpp  1195c.cpp  1734b.cpp  1877.cpp  1881a.cpp  1884a.cpp  1884b.cpp  1887a.cpp  1895a.cpp  1895b.cpp  1905c.cpp  1914b  1914b.cpp  1919a.cpp  1919b.cpp  1919c.cpp  1928c  1928c.cpp  1948b.cpp  1950b.cpp  1955c.cpp
prj.codeforces/output/: 0550b  1919a  1919c  1948b  1950b  1955c  Untitled-1
prj.codeforces/output/0550b.dSYM/Contents/: Info.plist
prj.codeforces/output/0550b.dSYM/Contents/Resources/DWARF/: 0550b
prj.codeforces/output/1919a.dSYM/Contents/: Info.plist
prj.codeforces/output/1919a.dSYM/Contents/Resources/DWARF/: 1919a
prj.codeforces/output/1919c.dSYM/Contents/: Info.plist
prj.codeforces/output/1919c.dSYM/Contents/Resources/DWARF/: 1919c
prj.codeforces/output/1948b.dSYM/Contents/: Info.plist
prj.codeforces/output/1948b.dSYM/Contents/Resources/DWARF/: 1948b
prj.codeforces/output/1950b.dSYM/Contents/: Info.plist
prj.codeforces/output/1950b.dSYM/Contents/Resources/DWARF/: 1950b
prj.codeforces/output/1955c.dSYM/Contents/: Info.plist
prj.codeforces/output/1955c.dSYM/Contents/Resources/DWARF/: 1955c
prj.codeforces/output/Untitled-1.dSYM/Contents/Resources/DWARF/: Untitled-1
prj.cw/: CMakeLists.txt  capture1.dockerignore  capture2.dockerignore  capture3.dockerignore  capture4.dockerignore  capture5.dockerignore  capture6.cpp
prj.cw/Resources/: main.cpp
prj.lab/: CMakeLists.txt  queuelstr.cpp
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: CMakeLists.txt  complex  complex.cpp  complex.hpp
prj.lab/complex.lib/: complex  complex.cpp  complex.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/queue/: CMakeLists.txt  queue.cpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuearrt/: CMakeLists.txt  queuearrt.hpp
prj.lab/queuelst/: queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstr/: CMakeLists.txt  queuelstr.cpp  queuelstr.hpp
prj.lab/queuelstt/: CMakeLists.txt  queuelstt.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stackarr/: stackarr.cpp  stackarr.hpp
prj.lab/stackarr.lib/: StackArr.cpp  StackArr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp
prj.test/: CMakeLists.txt  stacklst_test.cpp  test_bitset.cpp  test_complex.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_queuelstr.cpp  test_queuelstt.cpp  test_rational.cpp  test_robocalc.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp  test_stacklstt.cpp  utils.hpp
